fix: page display horizontal scrollbar

--- a/src/style/partial/header.scss
+++ b/src/style/partial/header.scss
@@ -3,7 +3,7 @@
   font-size: 17px;
   padding-bottom: 60px;
   margin: 0 auto;
-  width: 100vw;
+  width: calc(100vw - (100vw - 100%));
   box-sizing: border-box;
   nav {
     position: relative;
